[package]
name = "simple-nbd"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
